modified the file

--- a/20240311_himeno.html
+++ b/20240311_himeno.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>株式会社TECH</title>
     <meta charset="utf-8">
     <meta name="description" content="株式会社TECH">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
     <header>
         <h1>株式会社TECH</h1>
@@ -21,7 +23,7 @@
     </header>
     <main>
         <img src="./mv/mv.png" alt="mv">
-        <p>最新のテクノロジーで社会課題を解決</p>
+        <p>最新のテクノロジーで<em>社会課題</em>を解決</p>
         <br>
         <h2>会社概要</h2>
         <table>
@@ -64,4 +66,5 @@
         <small>&copy;2020 TECH inc.</small>
     </footer>
 </body>
+
 </html>
